Fix left-sidebar to stretch to the footer and same with main-content

--- a/src/styles/basics/_layout.scss
+++ b/src/styles/basics/_layout.scss
@@ -1,10 +1,9 @@
 .main-container {
-    // padding: 8px 8px 0 8px;
-    padding: $panel-gap;
+    padding: $panel-gap $panel-gap 0;
 
     display: grid;
     grid-template-columns: minmax(280px, auto) minmax(400px, 1fr);
-    grid-template-rows: auto 1fr;
+    grid-template-rows: 1fr auto;
     grid-template-areas:
         "left-sidebar main"
         "player player";
